security/hashi_vault/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: security
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
    app.kubernetes.io/part-of: security
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      protocol: TCP
    - name: cluster
      port: 8201
      targetPort: 8201
      protocol: TCP
