security/hashi_vault/transit-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vault-transit
  namespace: security
  labels:
    app.kubernetes.io/name: vault-transit
    app.kubernetes.io/instance: vault-transit
    app.kubernetes.io/part-of: security
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: vault-transit
    app.kubernetes.io/instance: vault-transit
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      protocol: TCP
